<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_hello"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_ok" />

            <Button
                android:id="@+id/btn_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_cancle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_pre"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_preview"
                android:drawableLeft="@drawable/arrow_left"
                android:drawablePadding="4dp" />

            <Button
                android:id="@+id/btn_Next"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/arrow_right"
                android:drawablePadding="4dp"
                android:text="@string/btn_next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgBtn_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/arrow_left" />

            <ImageButton
                android:id="@+id/imgBtnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/arrow_right" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>